--- a/app/index.html
+++ b/app/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="order">
 <head>
     <meta charset="UTF-8" />
     <link href="./bootstrap/css/bootstrap.css" rel="stylesheet" />
     <link href="./styles/main.css" rel="stylesheet" />
 
     <script type="text/javascript" src="./angular/angular.min.js"></script>
+   
     <script type="text/javascript" src="./js/libs/jquery.js"></script>
 
     <script type="text/javascript" src="./js/controllers/product.js"></script>
+    <script type="text/javascript" src="./js/controllers/category.js"></script>
+    <script type="text/javascript" src="./js/controllers/app.js"></script>
+     <script src="./angular/angular-resource.min.js"></script>
     <title>Open Order Application</title>
 </head>
 <body>
     <section>
         <header>
             <div class="container">
-                <div class="brand pull-left">
+                <div class="brand pull-left span4">
                     <h1>Open Order</h1>
                 </div>
-
-                <div class="search pull-right">
-                    <form action="" class="form-search" method="post">
+                
+                <div class="search pull-right span6">
+                    <form action="" class="form-search pull-right" method="post">
                         <input type="text" 
                                class="input-xlarge search-query" 
                                placeholder="Type your term of search..." 
@@ -28,33 +32,19 @@
                         />
                     </form>
                 </div>
+
+                <nav class="main-menu btn-group span4">
+                    <a href="#/categories/" class="btn ">Categories</a>
+                    <a href="#/products/" class="btn ">Products</a>
+                </nav>
             </div>
         </header>
 
-        <hr />
+        <hr />  
+    </section>
 
-        <article class="content-holder">
-            <div class="container">
-                <ul class="product-list" ng-controller="ProductListControl">
-                    <li ng-repeat="product in products | filter: query">
-                        <div class="product-holder">
-                            <img src="{{product.thumb}}" title="{{product.name}}" />
-
-                            <div>
-                                <span class="name">
-                                    <a href="#">{{product.name}}</a>
-                                </span>
-                                <span class="text">
-                                    {{product.price}}
-                                </span>
-                            </div>
-
-                            <p>{{product.details}}</p>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </article>
+    <section ng-view>
+        
     </section>
 </body>
 </html>
